test/Fail/Issue2993.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Resolve instance argument _AF_161 : Applicative (λ v₁ → _F_173 v₁)
  Candidates
    AF : Applicative F
    applicativeComp :
      {F = F₁ : Set → Set} {G : Set → Set} ⦃ _ : Applicative F₁ ⦄
      ⦃ _ : Applicative G ⦄ →
      Applicative (F₁ o G)
    (stuck)
  Resolve instance argument _AF_170 : Applicative (λ v → _F_171 v)
  Candidates
    AF : Applicative F
    applicativeComp :
      {F = F₁ : Set → Set} {G : Set → Set} ⦃ _ : Applicative F₁ ⦄
      ⦃ _ : Applicative G ⦄ →
      Applicative (F₁ o G)
    (stuck)
  F B =< _F_171 _B_169 (blocked on _F_171)
  _F_171 (Vec _B_169 n) =< F (Vec B n) (blocked on _F_171)
  _F_173 (Vec _B_160 n₁) =< F (Vec B n₁)
    (blocked on any(_B_160, _F_173))
  F B =< _F_173 _B_160 (blocked on _F_173)

Issue2993.agda:51.19-23: error: [UnsolvedInteractionMetas]
Unsolved interaction metas at the following locations:
  Issue2993.agda:51.19-23

Issue2993.agda:62.40-66.87: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue2993.agda:62.40-43
  Issue2993.agda:66.80-83
  Issue2993.agda:66.80-87
  Issue2993.agda:66.84-85
